# 3DCube

./: .gitignore  CMakeLists.txt  Surface.txt
src/: library.cpp  library.hpp  main.cpp  main.hpp
